syntax = "proto3";
option csharp_namespace = "GrpcGreeter";

package greet;

message Greeting{
   string first_name = 1;
   string last_name = 2;
}
message GreetRequest{
   Greeting greeting = 1;
}
message GreetResponse{
   string result = 1;
}
service Greeter{
    rpc Greet(GreetRequest) returns (GreetResponse){};
}


// syntax = "proto3";

// import "google/protobuf/empty.proto";
// import "google/protobuf/timestamp.proto";

// option csharp_namespace = "GrpcGreeter";

// package greet;

// // The greeting service definition.
// service Greeter {
//   // Sends a greeting
//   rpc SayHello (HelloRequest) returns (HelloReply);
//   rpc SayHelloStream (google.protobuf.Empty) returns (stream HelloReplyStream);
// }

// // The request message containing the user's name.
// message HelloRequest {
//   string name = 1;
// }

// // The response message containing the greetings.
// message HelloReply {
//   string message = 1;
// }

// message HelloReplyStream {
//   string message = 1;
//   google.protobuf.Timestamp timestamp = 2;
// }
